--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -99,13 +99,13 @@ grupoAdicionais.descricao.label=Description:
 adicionais.label=Additional
 adicionais.grupoAdicionais.label=Additional Group:
 adicionais.item.label=Item:
-adicionais.descricaoestab.label=Establishment Descriptions:
+adicionais.descricao.label=Establishment Descriptions:
 adicionais.preco.label=Price:
 
 menu.label=Menu
 menu.menuPrincipal.label=Main Menu:
 menu.item.label=Item:
-menu.descricaoestab.label=Establishment Descriptions:
+menu.descricao.label=Establishment Descriptions:
 menu.preco.label=Price:
 menu.tipoCobranca.label=Price Type:
 menu.grupoAdicionais.label=Additional Group:
