--- a/grails-app/i18n/messages_pt_BR.properties
+++ b/grails-app/i18n/messages_pt_BR.properties
@@ -19,6 +19,7 @@ default.not.equal.message=O campo [{0}] com o valor [{2}] não pode ser igual a 
 default.null.message=O campo [{0}] não pode ser vazia
 default.not.unique.message=O campo [{0}] com o valor [{2}] deve ser único
 default.link.skip.label=Skip to content&hellip
+default.adicionar.label=Adicionar
 
 default.paginate.prev=Anterior
 default.paginate.next=Próximo
@@ -128,8 +129,8 @@ estabelecimento.editarParam.label=Editar Parâmetros
 
 menuPrincipal.label=Menu Principal
 menuPrincipal.label.help=Cadastros dos grupos do cardápio. Exemplo: Entradas, Porções, Bebidas...
-menuPrincipal.item.label=Item:
-menuPrincipal.item.label.help=Grupo de produtos do cardápio
+menuPrincipal.nome.label=Nome:
+menuPrincipal.nome.label.help=Nome do grupo de produtos do cardápio
 menuPrincipal.qtdeitem.label=Qtde Item:
 menuPrincipal.qtdeitem.label.help=Quantidade de produtos a serem selecionados para compor um pedido. Exemplo pizza 1 sabor a quantidade deverá ser 1, já pizza 2 sabores a quantidade deverá ser 2, pois serão necessários selecionar dos produtos (sabores nesse caso) para compor o pedido.
 menuPrincipal.sequencia.label=Sequência:
@@ -155,19 +156,8 @@ comanda.dataultsituacao.label=Data Última Situação:
 comanda.numero.label=Número:
 comanda.numero.label.help=Número da comanda do estabelecimento
 
-item.label=Item
-item.label.help=Cadastro dos produtos e menus a serem comercializados pelo estabelecimento. Utilize nomes genéricos para os produtos, as especificações devem constar no cadastro do menu. Após criado um novo item, ele será submitido a aprovação e estará disponível num prazo máximo de 48 horas úteis.
-item.descricao.label=Descrição:
-item.descricao.label.help=Descrição do produto ou menu a ser comercializado pelo estabelecimento
-item.tipo.label=Tipo:
-item.tipo.label.help=Selecione "Menu" PARA categorias do do cardápio (Ex.: Entradas, Porções, Bebidas, etc). Selecione "Produto" para os itens (Ex.:Cerveja, Porção de batata frita, Pizza de calabreza, etc)
-item.aprovado.label=Aprovado:
-item.aprovado.label.help=Aprovação do item para disponibilização para uso.
-item.tipo.Menu=Menu
-item.tipo.Produto=Produto
-
 grupoAdicionais.label=Grupo Adicionais
-grupoAdicionais.label.help=Cadastro das grupos / categorias de produtos que podem receber ingredientes extras (adicionais). ex: pizzas -> adicionais: cebola, queijo, catupiry, etc.
+grupoAdicionais.label.help=Cadastro dos grupos / categorias de produtos que podem receber ingredientes extras (adicionais). ex: pizzas -> adicionais: cebola, queijo, catupiry, etc.
 grupoAdicionais.descricao.label=Descrição:
 grupoAdicionais.descricao.label.help=Descrição do nome do grupo que será criado
 
@@ -175,10 +165,10 @@ adicionais.label=Adicionais
 adicionais.label.help=Cadastro para inserir os itens / ingredientes que irão pertencer a esse grupo de adicionais previamente criado, Exemplo "grupo p/ pizzas" terá os seguintes adicionais (Cebola, borda de catupiry e bacon)
 adicionais.grupoAdicionais.label=Grupo Adicionais:
 adicionais.grupoAdicionais.label.help=Grupo que será incluso o novo item adicional.
-adicionais.item.label=Item:
-adicionais.item.label.help=Item adicional que será incluído no grupo
-adicionais.descricaoestab.label=Descrição Estabelecimento:
-adicionais.descricaoestab.label.help=Descrição personalizada do estabelecimento para esse adicional (opcional).
+adicionais.nome.label=Nome:
+adicionais.nome.label.help=Nome do item adicional que será incluído no grupo
+adicionais.descricao.label=Descrição:
+adicionais.descricao.label.help=Descrição personalizada do estabelecimento para esse adicional (opcional).
 adicionais.preco.label=Preço:
 adicionais.preco.label.help=Preço do item a ser adicionado ao produto. Caso este não represente valor, deixar o campo com valor zero.
 
@@ -186,10 +176,10 @@ menu.label=Menu
 menu.label.help=Cadastro dos produtos a serem disponibilizados no cardápio, incluindo preços e adicionais.
 menu.menuPrincipal.label=Menu Principal:
 menu.menuPrincipal.label.help=Menu onde o produto será inserido.
-menu.item.label=Item:
-menu.item.label.help=Produto a ser inserido no menu.
-menu.descricaoestab.label=Descrição Estabelecimento:
-menu.descricaoestab.label.help=Descrição personalizada do estabelecimento para esse item (opcional).
+menu.nome.label=Nome:
+menu.nome.label.help=Nome do produto a ser inserido no menu.
+menu.descricao.label=Descrição:
+menu.descricao.label.help=Descrição personalizada do estabelecimento para esse item (opcional).
 menu.preco.label=Preço:
 menu.preco.label.help=Preço do produto.
 menu.grupoAdicionais.label=Grupo Adicionais:
